# observation-server

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  observations.py  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml
static/: script.js  style.css
templates/: _base.html  daily.html  favorites.html
